# MoonEscape3D

./: CMakeLists.txt  README.md
modules/entry_point/: main.cpp
modules/gui/core/include/: camera.h  moon_escape_3D_widget.h  renderer.h  shader_program.h
modules/gui/core/src/: camera.cpp  moon_escape_3D_widget.cpp  renderer.cpp  shader_program.cpp
modules/gui/include/: moon_escape_3D_widget.h  namespace_gui.h
modules/gui/mesh/include/: axis.h  ball.h  factory.h  moon.h  object_base.h  player_ball.h
modules/gui/mesh/src/: axis.cpp  ball.cpp  factory.cpp  moon.cpp  object_base.cpp  player_ball.cpp
modules/gui/namespace/: namespace_gui.h
modules/gui/src/: camera.cpp  moon_escape_3D_widget.cpp
modules/utils/include/: utils.h
modules/utils/namespace/: namespace_utils.h
modules/utils/src/: utils.cpp
shaders/basic/: fragment.glsl  vertex.glsl
shaders/basic_gradient/: fragment.glsl
vcpkg/: vcpkg.cmake  vcpkg.json
